--- a/8puzzel.html
+++ b/8puzzel.html
@@ -365,8 +365,12 @@
         }
 
         const GAME = Game.ready();
+
+        ///////////////////////////////////////////////////////////////////////////Start to Solve////////////////////////////////////////////////////
+
         async function startToSolve(startNode) {
-            var road = await getRoad(startNode);
+            var mStartNode = await BDS(startNode,new Node(0,[[1,2,3],[4,5,6],[7,8,0]]))
+            var road = getRoad(mStartNode);
             GAME.setState(State.start(road[0].value));
             changeColor();
             road.shift();
@@ -421,6 +425,17 @@
             return childs;
         }
 
+        function contains(array, node) {
+            for (let i = 0; i < array.length; i++) {
+                
+                console.log(array[i].value.toString()+" "+node.value.toString()); 
+                if (array[i].value.toString() === node.value.toString()) {
+                    return i
+                }
+            }
+            return -1
+        }
+
         function copyGrid(grid) {
             var mGrid = [];
             for (var i = 0; i < grid.length; i++)
@@ -429,7 +444,58 @@
         }
         ///////////////////////////////////////////////////////////////////////////////////////// search Algorithm ///////////////////////////////////////////////////  
         function BDS(start, target) {
+            return new Promise(resolve => {
+                var res = {
+                    fromStart: null,
+                    fromEnd: null
+                }
+                var qStart = [start];
+                var qTarget = [target];
+                var startVisited = []
+                var targetVisited = []
+                intId1 = setInterval(function () {
+                   var current = qStart.shift();
+                    GAME.setState({
+                        grid: current.value,
+                        move: GAME.state.move + 1,
+                        status: "playing"
+                    })
+                    changeColor();
+                    var index = contains(targetVisited, current);
+                    if (index != -1) {
+                        clearInterval(intId1);
+                        clearInterval(GAME.tickId);
+                        changeColor();
+                        res.fromStart = current
+                        res.fromEnd = targetVisited[index]
+                        return resolve(res);
+                    } else {
+                        addToQ(qStart, alternative(current))
+                        startVisited.push(current)
+                    }
+                   var current = qTarget.pop();
+                    // GAME.setState({
+                    //     grid: current.value,
+                    //     move: GAME.state.move + 1,
+                    //     status: "playing"
+                    // })
+                    changeColor();
+                  var index = contains(startVisited, current);
+                    if (index != -1) {
+                        clearInterval(intId1);
+                        clearInterval(GAME.tickId);
+                        changeColor();
+                        res.fromStart = current
+                        res.fromEnd = startVisited[index]
+                        return resolve(res);
+                    } else {
+                        addToQ(qTarget, alternative(current))
+                        targetVisited.push(current)
+                    }
 
+
+                }, 0);
+            })
         }
 
         function BFS(start) {
@@ -446,7 +512,6 @@
                     if (isSolved(current.value)) {
                         clearInterval(intId1);
                         clearInterval(GAME.tickId);
-
                         changeColor();
                         return resolve(current);
                     } else {
@@ -463,19 +528,32 @@
             });
         }
 
-        async function getRoad(startNode) {
-            return new Promise(async resolve => {
-                let targetNode = await BFS(startNode);
+        function getRoad(mTargetNode) {
+            if (mTargetNode instanceof Node) {
+                var targetNode = mTargetNode;
                 var road = [targetNode];
-
                 console.log(road);
                 while (targetNode.parent != 0) {
                     road.push(targetNode.parent);
                     targetNode = targetNode.parent;
                 }
-
-                return resolve(road.reverse())
-            })
+                return road.reverse()
+            } else {
+                var sRoad=[] 
+                var fromStart=mTargetNode.fromStart;
+                while(fromStart.parent!=0){
+                    sRoad.push(fromStart.parent)
+                    fromStart=fromStart.parent
+                }
+                var eRoad=[mTargetNode.fromEnd] 
+                var fromEnd=mTargetNode.fromEnd;
+                while(fromEnd.parent!=0){
+                    eRoad.push(fromStart.parent)
+                    fromEnd=fromEnd.parent
+                }
+                 var res=[...sRoad.reverse(),...eRoad]
+                 return res;
+            }
 
 
         }
