--- a/8puzzel.html
+++ b/8puzzel.html
@@ -448,6 +448,9 @@
                 mGrid[i] = grid[i].slice();
             return mGrid;
         }
+        function shuffle(array) {
+    array.sort(() => Math.random() - 0.5);
+  }
         ///////////////////////////////////////////////////////////////////////////////////////// search Algorithm ///////////////////////////////////////////////////  
         function BDS(start, target) {
             return new Promise(resolve => {
@@ -478,17 +481,18 @@
                         return resolve(res);
                     } else {
                         addToQ(qStart, alternative(current))
+                        if(!contains(startVisited,current))
                         startVisited.push(current)
                     }
 
 
                     var current = qTarget.pop();
-                    // GAME.setState({
-                    //     grid: current.value,
-                    //     move: GAME.state.move + 1,
-                    //     status: "playing"
-                    // })
-                    // changeColor();
+                    GAME.setState({
+                        grid: current.value,
+                        move: GAME.state.move + 1,
+                        status: "playing"
+                    })
+                    changeColor();
                     var index = contains(startVisited, current);
                     if (index) {
                         clearInterval(intId1);
@@ -499,7 +503,12 @@
                         res.fromEnd = index
                         return resolve(res);
                     } else {
-                        addToQ(qTarget, alternative(current))
+                       
+                        console.log(current.value);
+                        var childs=alternative(current)
+                     //   shuffle(childs)
+                        addToQ(qTarget,childs )
+                        if(!contains(targetVisited,current))
                         targetVisited.push(current)
                     }
 
@@ -558,7 +567,7 @@
                 var eRoad = [mTargetNode.fromEnd]
                 var fromEnd = mTargetNode.fromEnd;
                 while (fromEnd.parent != 0) {
-                    eRoad.push(fromStart.parent)
+                    eRoad.push(fromEnd.parent)
                     fromEnd = fromEnd.parent
                 }
                 var res = [...sRoad.reverse(), ...eRoad]
@@ -588,7 +597,7 @@
                 playButton.textContent = "reset";
                 tickId = setInterval(GAME.tick, 1000);
                 changeColor();
-                startToSolve(new Node(0, [[0, 2, 6], [1, 3, 5], [4, 7, 8]]));
+                startToSolve(new Node(0,[[0, 2, 3], [1, 5, 6], [4, 7, 8]] ));
                 // [[5, 0, 3], [2, 1, 7], [4, 8, 6]] high
                 // [[0, 2, 6], [1, 3, 5], [4, 7, 8]] medium 21743
                 // [[0, 2, 3], [1, 5, 6], [4, 7, 8]] small 110
